# ToyProjects

./: .gitignore  CMakeLists.txt  FindGTest.cmake  README.md  toymatrix_inject_variables.cmake.in
cmake/: FindGTest.cmake  FindToyMatrix.cmake  safe_git_clone.cmake  toyrenderer_inject_variables.cmake.in
